tests/errors/oob_index.solar
fn main() {
  let a: [Int] = [10, 20, 30];
  println(a[5u]);
}
